# app/Http/Controllers/MediumController.php
@@ -3,10 +3,13 @@
 namespace App\Http\Controllers;
 
 use App\Http\Resources\MediumResource;
+use App\Models\Grade;
 use App\Models\Medium;
 use Carbon\Carbon;
 use Illuminate\Http\Request;
 use App\Services\MediumService;
+use Illuminate\Support\Facades\DB;
+use Illuminate\Support\Facades\Storage;
 
 
 class MediumController extends BaseController
@@ -90,16 +93,45 @@ class MediumController extends BaseController
         }
     }
 
+    /**
+     * Display the specified resource.
+     *
+     * @param int $id
+     * @return \Illuminate\Http\Response
+     */
+    /**
+     * @OA\Get(
+     *      path="/media/top",
+     *      operationId="getTopRated",
+     *      tags={"Media"},
+     *      summary="Get top rated films from last week",
+     *      description="Returns media data",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
     public function getTopRated()
     {
         $date = Carbon::now()->subDays(7);
-        $media = Medium::withAvg(['grades' => function ($query) use ($date) {
-            $query->where('created_at', '>=', $date);
-        }], 'rating')->orderBy('grades_avg_rating', 'desc')->get()->toArray();
-//        $media = Medium::withAvg(['grades'=>function($query){
-//            $query->where('rating', '<>');
-//        }], 'rating')->get();
-        return response()->json($media);
+        $media = DB::table('media')->select('media.*', DB::raw('AVG(grades.rating) as avg_rating'))->leftJoin('grades', 'media.id', '=', 'grad`es.medium_id')->where('grades.created_at', '>=', $date)->havingRaw('AVG(grades.rating) is not null')->groupBy('media.id')->get();
+        foreach ($media as $medium) {
+            $medium->image_path = $medium->image_path ? Storage::disk('google')->url($medium->image_path) : $medium->image_path;
+        }
+        return $this->sendResponse($media, 'Media retrieved successfully.');
     }
 
     /**
